# react-wasm-babel

./: .gitignore  .gitpod.yml  Makefile  README.md  package.json  tsconfig.json  webpack.config.js
.gitpod/: Dockerfile
pkg/fractal/: Cargo.toml
pkg/fractal/src/: lib.rs  mandel.rs
src/: index.tsx
src/components/: Canvas.tsx
src/pages/: App.tsx  Error.tsx  Incompatible.tsx  Loading.tsx
src/pkg/: Fractal.tsx
