# You must change these to your own details.
[package]
authors = ["jrbeverly"]
categories = ["wasm"]
description = "Fractal library"
edition = "2018"
name = "fractal"
readme = "README.md"
version = "1.0.0"

[lib]
crate-type = ["cdylib"]

[features]

[dependencies]
wasm-bindgen = "0.2.64"

wee_alloc = {version = "0.4.2", optional = true}

[dependencies.web-sys]
features = [
  'console',
  'CanvasRenderingContext2d',
  'Document',
  'EventTarget',
  'Element',
  'HtmlCanvasElement',
  'HtmlVideoElement',
  'HtmlElement',
  'ImageData',
  'MediaStream',
  'MessageEvent',
  'Performance',
  'RtcDataChannel',
  'RtcDataChannelEvent',
  'Window',
]
version = "0.3.40"

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

[dev-dependencies]
futures = "0.1.27"
js-sys = "0.3.40"
wasm-bindgen-futures = "0.3.22"

[profile.release]
lto = true
opt-level = 3